agregue 2 secciones mas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
             <h2>Section 4</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero sapiente quasi, officia porro placeat repellendus debitis asperiores iusto, maiores in, doloribus hic ratione odio excepturi. Itaque quia quidem doloribus dolorem provident vero in tempore quo illum non cum explicabo repellendus veritatis inventore quos deleniti, sapiente necessitatibus dolorum tempora, numquam ullam, doloremque hic! Amet magni fuga eum voluptate quisquam repellat dignissimos! Quisquam unde consequuntur beatae dolor explicabo dicta ut sunt dolorum a eaque, tenetur quos veniam odio modi quo suscipit? Aspernatur nisi quae quasi iste est quod nesciunt unde ipsum, neque hic maxime expedita quis deserunt placeat id molestiae impedit tempore.</p>
         </section>
+        <section>
+            <h2>Section 5</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero sapiente quasi, officia porro placeat repellendus debitis asperiores iusto, maiores in, doloribus hic ratione odio excepturi. Itaque quia quidem doloribus dolorem provident vero in tempore quo illum non cum explicabo repellendus veritatis inventore quos deleniti, sapiente necessitatibus dolorum tempora, numquam ullam, doloremque hic! Amet magni fuga eum voluptate quisquam repellat dignissimos! Quisquam unde consequuntur beatae dolor explicabo dicta ut sunt dolorum a eaque, tenetur quos veniam odio modi quo suscipit? Aspernatur nisi quae quasi iste est quod nesciunt unde ipsum, neque hic maxime expedita quis deserunt placeat id molestiae impedit tempore.</p>
+        </section>
+        <section>
+            <h2>Section 6</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero sapiente quasi, officia porro placeat repellendus debitis asperiores iusto, maiores in, doloribus hic ratione odio excepturi. Itaque quia quidem doloribus dolorem provident vero in tempore quo illum non cum explicabo repellendus veritatis inventore quos deleniti, sapiente necessitatibus dolorum tempora, numquam ullam, doloremque hic! Amet magni fuga eum voluptate quisquam repellat dignissimos! Quisquam unde consequuntur beatae dolor explicabo dicta ut sunt dolorum a eaque, tenetur quos veniam odio modi quo suscipit? Aspernatur nisi quae quasi iste est quod nesciunt unde ipsum, neque hic maxime expedita quis deserunt placeat id molestiae impedit tempore.</p>
+        </section>
    </main>
    <footer>
        <h3>Ricardo</h3>
